# Vibe-Protect

./: .dockerignore  Dockerfile  INSTALL.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  design_guidelines.json  pyproject.toml
.emergent/: emergent.yml
.github/workflows/: ci.yml  publish-pypi.yml  release-windows.yml  secrets-scan.yml
backend/: server.py
backend/tests/: test_audit_sqlite.py  test_autostart.py  test_card_brands.py  test_cli_file_and_precommit.py  test_cli_install_hook.py  test_cli_verify_telemetry.py  test_corpus.py  test_enterprise_dispatcher.py  test_ml_scorer.py  test_stats_history.py  test_vibe_desktop.py  test_vibe_protect.py
backend/tests/corpus/: false_positives.py  generators.py
cli/: README.md  advanced_detector.py  audit_logger.py  autostart.py  community_rules.py  enterprise_config.py  pattern_updater.py  patterns.py  production_updater.py  report_vuln.py  requirements.txt  security_audit.py  updater.py  vibe_desktop.py  vibe_protect.py  vibe_protect_enterprise.py
desktop/: README.md  requirements.txt  vibe_desktop.py
docs/: ENTERPRISE.md  NETWORK.md  PRIVACY.md  enterprise-policy.sample.yaml
docs/chrome-store/: listing.md  privacy-policy.md
docs/community-rules-template/: CONTRIBUTING.md  PATTERN_SCHEMA.md  README.md  approved_patterns.json
extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  patterns.js  popup.css  popup.html  popup.js  redactor.js
extension/icons/: README.md
frontend/public/: index.html  manifest.json  service-worker.js  stats-history.jsonl  stats.json
frontend/src/: App.css  App.js  index.css  index.js  serviceWorker.js
frontend/src/components/: Bookmarklet.jsx  Downloads.jsx  Feed.jsx  Footer.jsx  Hero.jsx  Nav.jsx  PatternBreakdown.jsx  PatternLibrary.jsx  Playground.jsx  PrivacyBadge.jsx  PrivacyPage.jsx  Receipts.jsx  Sparkline.jsx  StatsPanel.jsx  VerifiedBadge.jsx
frontend/src/lib/: advancedDetector.js  patterns.js  shareLink.js  shareLink.test.js
installer/: README.md  build_windows.py  patterns.json  setup.iss  vibe_desktop.spec
memory/: PRD.md
scripts/: generate_icons.py  generate_stats.py
security_audits/: audit_20260420T040915Z.html  audit_20260420T050251Z.json
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
vscode-extension/: .vscodeignore  LICENSE.txt  README.md  package.json
vscode-extension/src/: extension.ts
vscode-extension/test/: cli-bridge.test.js
